TestSuite/Verification/Error/Parallel/Correctness/Between-Multiple-Devices/Mapping-Defect/out/includes/ChangedAccessScheme.hxx

/*********************************************************************/
/*        This is a generated C++ Header file.                       */
/*        Generated by PatternDSL.                                   */
/*        Contains the function declarations for the source file     */
/*********************************************************************/

#ifndef ChangedAccessScheme_HXX
#define ChangedAccessScheme_HXX

uint randomizer(int n = 42) {
    srand(n);
    return rand();
}



#endif